<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_normal">

    <TextView
        android:id="@+id/tv_restore_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_import"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edt_restore_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_restore_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_done"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/label_restore_from_seed"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/active_button_background"
        android:gravity="center"
        android:text="@string/label_next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>