<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_item_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/hint_list_name"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/font_medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_normal"
        android:background="@drawable/shadow_background"
        android:padding="@dimen/margin_smaller"
        android:text="RTR"
        android:textSize="@dimen/font_small"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/edt_amount_layout"
        app:layout_constraintRight_toRightOf="@id/edt_amount_layout"
        app:layout_constraintTop_toTopOf="@id/edt_amount_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_amount_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_item_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/hint_amount"
            android:maxLines="1"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="@dimen/font_medium" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_propose"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/active_button_background"
        android:gravity="center"
        android:text="@string/label_propose"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>