<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterGray">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_import_seed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/default_card_background"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@id/cv_import_key"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_seed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_restore_from_seed"
                android:textSize="@dimen/font_large"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_seed_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_seed_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/label_restore_from_seed_hint"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_seed_title" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/lightGray"
                app:layout_constraintBottom_toTopOf="@id/tv_next_to_seed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/tv_next_to_seed"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/label_next"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_import_key"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/default_card_background"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_import_seed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_key_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_restore_from_key"
                android:textSize="@dimen/font_large"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@id/tv_key_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_key_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/label_restore_from_key_hint"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_key_title" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/lightGray"
                app:layout_constraintBottom_toTopOf="@id/tv_next_to_key"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/tv_next_to_key"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:text="@string/label_next"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>